[tool.poetry]
name = "cts"
description = "Conformance Test Suite of the ANARI SDK"
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
datetime = "^5.5"
pathlib = "^1.0.1"
tabulate = "^0.9.0"
pillow = "^10.4.0"
reportlab = "^4.2.2"
scikit-image = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
