## Copyright 2022-2026 The Khronos Group
## SPDX-License-Identifier: Apache-2.0

# The CTS is a self-contained C++ tool (`cts`) that renders and scores; this
# Python layer (ctsReport.py) only ever reads the results tree it writes — the
# `report` and `diff` commands. Those use the standard library alone; the
# optional PDF report is the layer's only third-party dependency, reportlab,
# imported lazily. So nothing is required to run a text report or a device diff:
#
#   pip install reportlab        # only needed for `ctsReport.py report --pdf`
#   pip install ".[pdf]"         # equivalent, from this directory

[project]
name = "anari-cts-report"
version = "0.1.0"
description = "Reporting layer for the ANARI SDK Conformance Test Suite"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
pdf = ["reportlab>=4.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["ctsReport"]
