## Copyright 2022-2026 The Khronos Group
## SPDX-License-Identifier: Apache-2.0

# The CTS is a self-contained C++ tool (`anariCts`) that renders, scores, and
# reports (text/HTML, ADR-0008). This Python layer (ctsReport.py) is
# retained only for the PDF, which it renders from the results tree the tool
# writes. Its one third-party dependency is reportlab, imported lazily:
#
#   pip install reportlab        # required for `ctsReport.py report --pdf`
#   pip install ".[pdf]"         # equivalent, from this directory

[project]
name = "anari-cts-report"
version = "0.1.0"
description = "Reporting layer for the ANARI SDK Conformance Test Suite"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
pdf = ["reportlab>=4.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["ctsReport"]
